--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
                            
                         </font>  
                     </tr> 
+                 <!--Heading start-->
+         <table id="header" border ="1" width="100%" cellpadding="0">
+            <table border="1" cellpadding="15" cellspacing="0"      
+            align="center">            
+        <tr>
+            <td>
+            <font face="algerian" color="blue" size="5">
+                Experience
+            </font>
+            </td>
+        </tr>
+        <!--Heading End-->
          <tr>
                         <td width="30%">
                         <font face="bold" color="black" size="5">
