--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                            
                         </font>  
                     </tr> 
-                 <!--Heading start-->
+         <!--Heading start-->
          <table id="header" border ="1" width="100%" cellpadding="0">
             <table border="1" cellpadding="15" cellspacing="0"      
             align="center">            
@@ -190,6 +190,10 @@
             </td>
         </tr>
         <!--Heading End-->
+             <td width="50%">
+                <img src="experience.jpg" width="30%">
+            
+            </td>
          <tr>
                         <td width="30%">
                         <font face="bold" color="black" size="5">
