--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
         </tr>
         <!--Heading End-->
                 <td width="30%">
-                <img src="experience.jpg" width="10%">
+                <img src="experience.jpg" width="30%">
             
             </td>
          <tr>
                         <td width="30%">
-                        <font face="bold" color="black" size="5">
+                        <font face="bold" color="white" size="5">
                             
                      Core Team Member -- Industreeowl Core Team Member  
                      SRM ECell · Full-timeSRM ECell 
