--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
         <h3></h3> 
         <h4></h4>
         <h5></h5>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
