--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mainak Dasgupta's website</title>
     </head>
-    <body background="website.jpg">
+    <body background="back.gif">
         
         <!--Start Header-->
         <table id="header" border ="1" width="100%" cellpadding="0">
