--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             <img src="new.gif">
         </font>
             </td>
-            <td>
-                <a href="https://student.srmap.edu.in/srmapstudentcorner/HRDSystem"><font face ="bold" color="red" size="4">My College Portal</font></a>            
-            </td>
+            
             <td>
                 <a href="https://www.facebook.com/profile.php?id=100006374944660"><font face ="bold" color="red" size="4">My facebook Profile</font></a>            
             </td>
@@ -41,7 +39,7 @@
                     align="center">            
                 <tr>
                     <td>
-                    <a href="https://mainak27022002.wixsite.com/mysite/"><font face ="algerian" color="red" size="4">ABOUT ME </font></a>
+                    <a href="https://mainak27022002.wixsite.com/mysite/"><font face ="algerian" color="red" size="4">ABOUT ME (Click here to view more) </font></a>
                     </td>
                 </tr>
                 <!--Heading End-->
